<resources>
    <string name="app_name">HW4</string>
    <string name="triviaAppTitleText">Welcome to &#10;Trivia App</string>
    <string name="exitTextStr">Exit</string>
    <string name="startTriviaTxt">Start Trivia</string>
    <string name="loadingTriviaTxt">Loading Trivia</string>
    <string name="q1Txt">Q1</string>
    <string name="countdownTxt">You have 120 seconds remaining</string>
    <string name="countdownTxt1">Time Left: 120 seconds</string>
    <string name="quitTxt">Quit</string>
    <string name="nextTxt">Next</string>
    <string name="title_activity_stats">Stats</string>
    <string name="triviaStatsTitle">Trivia Stats</string>
    <string name="correctAnswers">Correct Answers</string>
    <string name="answersResposne" />
    <string name="tryAgainButton">Try Again</string>
    <string name="correctAnswersPercent">0</string>
</resources>
